--- a/ansible/PF/POST/pf_external_idp.yml
+++ b/ansible/PF/POST/pf_external_idp.yml
@@ -127,6 +127,9 @@
         "extendedAttributes": [
           {
             "name": "mail"
+          },
+          {
+            "name": "SAML_AUTHN_CTX"
           }
           ]
       }
@@ -192,7 +195,8 @@
       "spBrowserSso": {
         "protocol": "SAML20",
         "enabledProfiles": [
-          "IDP_INITIATED_SSO"
+          "IDP_INITIATED_SSO",
+          "SP_INITIATED_SSO"
           ],
         "incomingBindings": [
           "POST",
